2008-06-04  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (DISPLAY-GET-DEFAULT): add
	* modules/clx/new-clx/clx.lisp (display-get-default)
	(display-resource-manager-string, screen-resource-string): export

2008-06-04  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (NO-OPERATION): return no values on
	success and signal an error on failure

2008-06-03  Sam Steingold  <sds@gnu.org>

	* configure, makemake.in: pass --disable-option-checking to
	sub-configures

2008-06-03  Sam Steingold  <sds@gnu.org>

	* utils/modprep.lisp (strip-comments): new function
	(split-command): use it to support comments inside DEFCHECKERs

2008-06-03  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/posix.lisp (physical-memory, *services-file*):
	signal an error on non UNIX & Win32 platforms

2008-06-03  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (FILE-OWNER): use *PATHNAME-ENCODING*
	for the filename instead of *MISC-ENCODING*
	(get_owner) [!HAVE_GETPWUID && !WIN32_NATIVE]: use an exhaustive
	cpp conditioning to ensure that it is always defined

2008-06-03  Sam Steingold  <sds@gnu.org>

	* makemake.in (module_configure_flags): do not add
	--with-dynamic-ffi & --with-dynamic-modules

2008-06-02  Sam Steingold  <sds@gnu.org>

	* makemake.in (encflags): add -Emisc 1:1 so that syscalls tests
	pass (user names may be 8bit)

2008-06-02  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (OS:ERRNO, OS:STRERROR): implement
	* modules/syscalls/posix.lisp (OS:ERRNO, OS:STRERROR): export

2008-06-02  Sam Steingold  <sds@gnu.org>

	* makemake.in (IMPNOTES): rename to IMPNOTES_FILES to avoid
	conflict with $IMPNOTES which is used by IMPNOTES-ROOT

2008-06-02  Sam Steingold  <sds@gnu.org>

	* condition.lisp (mecase): ECASE for DEFMACRO: print the form in
	the error message
	* foreign1.lisp (parse-c-function, DEF-C-VAR): use SYS::MECASE
	instead of ECASE for a better error message

2008-06-01  Sam Steingold  <sds@gnu.org>
