@@ -1,5 +1,12 @@
 2008-06-04  Sam Steingold  <sds@gnu.org>
 
+	* inspect.lisp (get-insp): accept :w and :n
+	(print-inspection, inspect-frontend): say when more slots are available
+	(inspect): bind *INSPECT-LENGTH* so that :w & :n do not act across
+	inspect invocations
+
+2008-06-04  Sam Steingold  <sds@gnu.org>
+
 	* modules/clx/new-clx/clx.f (DISPLAY-GET-DEFAULT): add
 	* modules/clx/new-clx/clx.lisp (display-get-default)
 	(display-resource-manager-string, screen-resource-string): export
